Fully completed webpages

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<h1>DON'T YOU WISH YOUR STOVETOP WAS HOT LIKE ME?</h1>
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpngimg.com%2Fuploads%2Ffrying_pan%2Ffrying_pan_PNG8349.png&f=1&nofb=1" width="400" height="200">
 <body>
-    <a href="./lasagna.html">Lasagna for people with unusually large phallus'</a>
-    
+    <p>This is a website where people come to make food and kick ass and we're all out of ass. You better sit down shut up and enjoy our flavors. This isn't falvor town though. That shit is trademarked.</p>
+   <p> <a href="./lasagna.html">Lasagna for people with unusually large phallus'</a></p>
+   <p> <a href="./pineapple_on_a_stick.html">Pineapple but for people who are cool.</a></p>
+   <p><a href="./roast_carrot.html"> A roast, a carrot, a roast carrot.</a></p>
 </body>
 </html>
